Resolves: tdf#125883 if old and new text will be the same don't change it

that way the cursor and selection is left alone

Change-Id: Id6efa7e2fe27f031761271fd591de7a73a1f6963
Reviewed-on: https://gerrit.libreoffice.org/74159
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>